<resources>
    <string name="app_name">AppChat</string>
    <string name="photo_string">SELECT PHOTO</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Already have an account ?</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="forget">Forget PassWord</string>
    <string name="register_in_login">Register</string>
    <string name="send">Send</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_user">User</string>
    <string name="tab_notification">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>