<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/newcolorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">
    <ImageButton
        android:id="@+id/img_photo"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:background="@drawable/custom_img_btn"
        android:layout_width="120dp"
        android:layout_height="120dp">
    </ImageButton>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ed_user"
            android:layout_margin="15dp"
            android:hint="@string/user_name"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="12dp"
            android:textColorHint="@color/gray"
            android:background="@drawable/custom_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ed_pass"
            android:hint="@string/password"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:padding="12dp"
            android:textColorHint="@color/gray"
            android:background="@drawable/custom_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ed_email"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_margin="15dp"
            android:textColorHint="@color/gray"
            android:background="@drawable/custom_input"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:id="@+id/btn_register"
            android:padding="10dp"
            android:text="@string/register"
            android:background="@drawable/custom_button"
            android:layout_margin="15dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:textSize="17dp"
            android:text="@string/create_account"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>