<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tab_layout"
        android:layout_height="wrap_content"
        app:tabBackground="@color/newcolorPrimary"
        app:tabTextColor="@color/white"
        app:tabMode="fixed">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/tab_chat"
            android:icon="@drawable/chat_24"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:icon="@drawable/notification"
            android:text="@string/tab_notification"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:text="@string/tab_user"
            android:icon="@drawable/user_24"
            android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:id="@+id/view_Pager"
        android:layout_height="match_parent" />

</LinearLayout>