<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/newcolorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegisterActivity">
    <ImageButton
        android:id="@+id/img_photo"
        android:layout_gravity="center"
        android:layout_marginVertical="100dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/custom_img_btn"
        android:layout_width="120dp"
        android:layout_height="120dp">
    </ImageButton>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ed_user"
            android:layout_margin="15dp"
            android:hint="@string/user_name"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textColorHint="@color/gray"
            android:background="@drawable/custom_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ed_pass"
            android:hint="@string/password"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textColorHint="@color/gray"
            android:background="@drawable/custom_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:id="@+id/btn_login"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_margin="15dp"
            android:layout_height="wrap_content" />
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:textSize="17dp"-->
<!--            android:text="@string/create_account"-->
<!--            android:layout_height="wrap_content"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@color/newcolorPrimary">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/register_in_login"
                android:layout_weight="1"
                android:id="@+id/txt_register"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:text="@string/forget"
                android:layout_weight="1"
                android:id="@+id/txt_forget"
                android:textSize="17dp"
                android:gravity="end"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
